--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h2>About SHHH!</h2>  
     <p>  
       SHHH! is a semi-anonymous posting platform inspired by Doxbin.  
-      Users can post text or ASCII messages with optional alias. Admins can track posts but your identity remains hidden from other users.  
+      Users can post messages with optional alias. Admins can track posts but your identity remains hidden from other users.  
     </p>  
     <div class="button-center">  
       <button id="closeAbout">Back</button>  
